methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:70: error: not found: value déplace
  déplace()
  ^